modified the controller logic to retrieve and return the deleted message instead of just a boolean